# Doodle

./: CMakeLists.txt  Readme.md
logic/: BGTile.cpp  BGTile.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Camera.cpp  Camera.h  EntityModel.cpp  EntityModel.h  Factory.cpp  Factory.h  Observer.cpp  Observer.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h
view/: BGTileView.cpp  BGTileView.h  BonusView.cpp  BonusView.h  CMakeLists.txt  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h  main.cpp
